app/assets/stylesheets/welcome.css.scss
#banner {
	background-image: url(image_path(welcome_banner_image));
	background-size: cover;
	background-repeat: no-repeat;
	background-position: top center;
	width: 100%;
	min-height: 400px;
	display: table;
	.banner_content {
		display: table-cell;
		vertical-align: middle;
		text-align: center;

		button, .button {
		  border: 4px solid $blue;
			outline: none;
			background: $blue;
			padding: 1rem 3.5rem;
			min-width: 100px;
			border-radius: 0.50rem;
			font-size: 20px;
		}

		button, .button:hover {
		  background-color: white;
    	color: $blue;
 	    text-decoration: none;
    	background-color: white;
    	border: 4px solid $blue;
		}

		
		h1 {
			@include bold_font;
			color: $red;
			font-size: 3.5rem;
			margin: 0;
		}
		tag {
			@include bold_font;
			color: white;
			font-size: 2.5rem;
			margin: 3.5rem 0 3.5rem 0;
		}
		p {
			color: white;
			font-size: 2.5rem;
			margin: 0 0 2.5rem 0;
		}
		a {
			color: white;
			font-size: 1.2rem;
			margin: 0 0 2.5rem 0;
		}
	}
}

#testimonial {
	text-align: center;
	font-size: 1.5rem;
	color: $dark_gray;
	padding: 3.5rem 0;
	.quote {
		font-style: italic;
		margin: 0 0 .5rem 0;
	}
	.name {
		@include bold_font;
		color: $dark_gray;
		margin: 0;
		font-size: 1.85rem;
	}
}

#callouts {
	background-image: url(image_path(callout_background));
	background-size: cover;
	background-repeat: no-repeat;
	background-position: top center;
	width: 100%;
	min-height: 400px;
	text-align: center;
	vertical-align: middle;
	h2 {
		@include bold_font;
		color: $blue;
		margin-bottom: 0;
	}
	i {
		font-size: 4.5rem;
		color: white;
		padding: 3.0rem 2.5%;
	}
	p {
		color: white;
	}
}

#clients {
	text-align: left;
	font-size: 1.5rem;
	color: $dark_gray;
	padding: 3.5rem 0;
}

#trainers {
	text-align: left;
	font-size: 1.5rem;
	color: $dark_gray;
	padding: 3.5rem 0;
}

#about {
	text-align: center;
	font-size: 1.5rem;
	padding: 3.5rem 0;
	.company {
		text-align: center;
		padding: 1.5rem 2.5%;
		float: left;
		h2 {
			@include bold_font;
			color: $red;
			margin-bottom: 0;
		}
		p {
			color: $dark_gray;
		}
	}
}

#faq {
	text-align: center;
	font-size: 1.5rem;
	padding: 3.5rem 0;
	.questions {
		text-align: center;
		padding: 1.5rem 2.5%;
		float: left;
		h2 {
			@include bold_font;
			color: $red;
			margin-bottom: 0;
		}
		q {
			font-size: 1.5rem;
			color: blue;
		}
		a {
			color: $dark_gray;
		}
	}
}

button, .button {
  border: 2px solid $blue;
	outline: none;
	background: $blue;
	padding: 1rem 3.5rem;
	min-width: 100px;
	border-radius: 3.75rem;
	font-size: 20px;
}

button, .button:hover {
	  border: 2px solid $blue;
    color: white;
    text-decoration: none;
    background-color: $red;
    border-color: $blue;
}

#bottom_cta {
	text-align: center;
	padding: 7.5rem 0;
	h2 {
		@include bold_font;
		color: $red;
		font-size: 2.5rem;
		margin: 0;
	}
	p {
			font-size: 1.75rem;
			margin: 0 0 2.0rem 0;
			color: $dark_gray;
		}
}

#banner_launch {
	background-image: url(image_path(welcome_banner_image));
	background-size: cover;
	background-repeat: no-repeat;
	background-position: top center;
	width: 100%;
	min-height: 400px;
	display: table;
	.banner_content {
		display: table-cell;
		vertical-align: middle;
		text-align: center;

		button, .button {
		  border: 4px solid $blue;
			outline: none;
			background: $blue;
			padding: 1rem 3.5rem;
			min-width: 100px;
			border-radius: 0.50rem;
			font-size: 20px;
		}

		button, .button:hover {
		  background-color: white;
    	color: $blue;
 	    text-decoration: none;
    	background-color: white;
    	border: 4px solid $blue;
		}

		
		h1 {
			@include bold_font;
			color: $red;
			font-size: 3.5rem;
			margin: 0;
		}
		tag {
			@include bold_font;
			color: white;
			font-size: 2.5rem;
			margin: 3.5rem 0 3.5rem 0;
		}
		p {
			color: white;
			font-size: 2.5rem;
			margin: 0 0 2.5rem 0;
		}
		a {
			color: white;
			font-size: 1.2rem;
			margin: 0 0 2.5rem 0;
		}
	}
}

#callout_launch {
	background-repeat: no-repeat;
	background-position: top center;
	width: 100%;
	min-height: 400px;
	text-align: center;
	vertical-align: middle;
	h2 {
		@include bold_font;
		font-size: 3.0rem;
		color: $red;
		margin-bottom: 0;
	}
	i {
		font-size: 4.5rem;
		color: $blue;
		padding: 3.0rem 2.5%;
	}
	p {
		font-size: 2.0rem;
		color: $blue;
	}

	button, .button {
	  border: 4px solid $blue;
		outline: none;
		background: $blue;
		padding: 1rem 3.5rem;
		min-width: 100px;
		border-radius: 0.50rem;
		font-size: 20px;
	}

	button, .button:hover {
	  background-color: white;
  	color: $blue;
	    text-decoration: none;
  	background-color: white;
  	border: 4px solid $blue;
	}
}

